syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.ecommerce.grpc.catalog";
option java_outer_classname = "CatalogProto";

package catalog;

service CatalogService {
  rpc GetProduct (ProductRequest) returns (ProductResponse);
}

// Сообщение-запрос
message ProductRequest {
  string id = 1;
}

// Сообщение-ответ
message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
}